--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -726,6 +726,11 @@ border-radius: 20px !important;
 .modal {
   z-index : 10000002 !important;
 }
+@media only screen and (max-width: 992px){
+.modal {
+    width: 98%;
+}
+}
 .modal-footer{
   position: absolute;
   top: 85%;
