--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -960,6 +960,13 @@ span.badge.new{
    margin-top: -40px !important;
 
 }
+.knocks_group_avatar_frame{
+   width : 80px !important;
+   height: 80px !important;
+   margin-left: 1% !important;
+   margin-top: -40px !important;
+
+}
 .knocks_profile_avatar{
   width: 100%;
   border-radius:10px;
