--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2093,3 +2093,9 @@ font-size: 70%;
     font-size: 14px;
     border-radius: 0;
 }
+.el-checkbox-button:first-child .el-checkbox-button__inner {
+    border-left: none;
+    border-radius: 4px 4px 4px 4px;
+    -webkit-box-shadow: none!important;
+    box-shadow: none!important;
+}
