--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -502,6 +502,8 @@ body{
 }
 .knocks_tiny_floating_btn > i {
     line-height: 35px !important;
+    font-size: 17px !important;
+    text-align: center;
 }
 .knocks_btn_recording{
   background-color : red !important;
