--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26306,6 +26306,8 @@ body {
 
 .knocks_tiny_floating_btn > i {
   line-height: 35px !important;
+  font-size: 17px !important;
+  text-align: center;
 }
 
 .knocks_btn_recording {
