--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -178,7 +178,7 @@ body{
   padding-bottom : 2px !important;
 }
 .knocks_xs_padding{
-  padding : 2px ;
+  padding : 2px !important;
 }
 .knocks_content_padding{
   padding-top: 3px ;
@@ -393,7 +393,7 @@ body{
     background-repeat: round;
 }
 .knocks_baby_blue{
-  background-color : #eef7fa !important;
+  background-color : #f0f9fd !important;
 }
 
 // KNOCKS COLOR KITS PRESETS ENDS ___________________________________________________________________
