--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1854,6 +1854,16 @@ input[type=range]:focus::-moz-range-track {
   -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2) !important;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2) !important;
 }
+.knocks_profile_update_anchor{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.6);
+    padding: 5px;
+    border-radius: 3px;
+    border-top-left-radius: 10px;
+    color: white;
+}
 .knocks_modal , .knocks_modal > .modal_content , .knocks_modal > .modal-footer{
   height: -webkit-fill-available !important;
   background-color : $knocksLightColor;
