--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -51,8 +51,8 @@ $knocksSuccessColor : #1de9b6;
 $knocksLightRgba : rgba(255,248,220 , 0.5);
 $knocksPinkColor : #f06292;
 $knocksLightPinkColor : #f8bbd0;
-$knocksGrayColor : #cfd8dc ;
-$knocksLightCandyPinkColor : #fff7f8;
+$knocksGrayColor : #cfd8dc 
+;$knocksLightCandyPinkColor : #fff7f8;
 //lightrgb(255,248,220)
 
 //Knocks MIXINS
