--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -967,11 +967,13 @@ span.badge.new{
   border-left : 1px solid #29b6f6;
 }
 #knocks_main_navbar{
-  background-color : $knocksPrimaryColor !important;
- // border-bottom : 2px solid $knocksPrimaryColor;
+  background-color : #fff !important;
+ //border-bottom : 2px solid $knocksPrimaryColor;
   height : 50px !important;
   min-height : 50px !important;
   line-height : 50px !important;
+  box-shadow : 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2) !important
+
 }
 @media only screen and (max-width : 800px) {
   #knocks_sidebar{
@@ -2159,11 +2161,19 @@ font-size: 70%;
     z-index : 5000000000 !important;
   }
  @media only screen and (max-width : 750px){
+    .knocks_rightbar_toggler{
+      margin-top : 10px ;
+      margin-right : 10px;
+    }
     .el-dialog--small{
     width : 90% ;
   }
 }
   @media only screen and (min-width : 750px){
+    .knocks_rightbar_toggler{
+      margin-top : -3px ;
+      margin-right : -3px;
+    }
     .el-dialog--small{
     width : 70% ;
   }
