--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -40,10 +40,10 @@ $panel-default-heading-bg: #fff;
 
 //KNOCKS VARIABLES
 
-$knocksPrimaryColor : #691a40;
+$knocksPrimaryColor : #922459;
 $knocksLightColor : #fffceb;
 $knocksLightActiveColor : #fff5d1;
-$knocksActiveColor : #91124f;
+$knocksActiveColor : #a62965;
 $knocksPrimaryColorTransparent : rgba(105,26,64 , 0.9);
 $knocksActiveColorTransparent : rgba(145,18,79,0.9);
 $knocksLightRed : #ef5350;
