--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -643,7 +643,9 @@ border-radius: 20px !important;
 .knocks_gray_hover:hover{
   background-color : #e7e7e7
 }
-
+.knocks_blue_gray_hover:hover{
+  background-color : #b0bec5
+}
 // KNOCKS ANCHOR  PRESETS ENDS ________________________________________________________________
 
 // KNOCKS ORIGINS  PRESETS BEGINS _____________________________________________________________
