--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,6 +53,9 @@ footer{
 body{
   height : auto;
 }
+.knocks_ofy{
+  overflow-y: auto;
+}
 // KNOCKS MASTER TAGS PRESETS ENDS ____________________________________________________________________________
 
 // KNOCKS TEXT & TYPOGRAPHY PRESETS BEGINS ____________________________________________________________________
