--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -237,6 +237,10 @@ body{
     margin: 1% !important;
     padding: 1% !important;
 }
+.knocks_tinny_bounds{
+    margin: 5px !important;
+    padding: 5px !important;
+}
 .knocks_house_keeper{
   padding: 0px  !important;
   margin: 0px !important;
