--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -45,7 +45,11 @@ $knocksLightColor : #fffceb;
 $knocksLightActiveColor : #fff5d1;
 $knocksActiveColor : #a62965;	
 $knocksPrimaryColorTransparent : rgba(105,26,64 , 0.9);
+$knocksPrimaryColorTransparent2 : rgba(105,26,64 , 0.8);
+$knocksPrimaryColorTransparent3 : rgba(105,26,64 , 0.6);
 $knocksActiveColorTransparent : rgba(145,18,79,0.9);
+$knocksActiveColorTransparent2 : rgba(145,18,79,0.8);
+$knocksActiveColorTransparent3 : rgba(145,18,79,0.6);
 $knocksLightRed : #ef5350;
 $knocksSuccessColor : #1de9b6;
 $knocksLightRgba : rgba(255,248,220 , 0.5);
