--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28289,3 +28289,12 @@ input:-webkit-autofill {
   overflow: auto;
 }
 
+.knocks_off {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+}
+
