--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2372,3 +2372,11 @@ font-size: 70%;
   max-width: 90vw;
   overflow: auto;
 }
+.knocks_off{
+  position : fixed;
+  top : 0;
+  left : 0;
+  background-color : #fff;
+  width : 100%;
+  height : 100%;
+}
