--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1534,7 +1534,8 @@ span.badge.new{
     border-radius : 15px !important;
     padding : 2%;
     min-height: 80px;
-    word-break: break-all;
+    
+        word-break: break-word;
      word-wrap: break-word;
   }
 
