--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -40,25 +40,7 @@ $panel-default-heading-bg: #fff;
 
 //KNOCKS VARIABLES
 
-$knocksPrimaryColor : #922459;
-$knocksLightColor : #fffceb;
-$knocksLightActiveColor : #fff5d1;
-$knocksActiveColor : #a62965;	
-$knocksBabyBlue : #f0f9fd;
-$knocksOceanBlue : #81d4fa;
-$knocksPrimaryColorTransparent : rgba(105,26,64 , 0.9);
-$knocksPrimaryColorTransparent2 : rgba(105,26,64 , 0.8);
-$knocksPrimaryColorTransparent3 : rgba(105,26,64 , 0.6);
-$knocksActiveColorTransparent : rgba(145,18,79,0.9);
-$knocksActiveColorTransparent2 : rgba(145,18,79,0.8);
-$knocksActiveColorTransparent3 : rgba(145,18,79,0.6);
-$knocksLightRed : #ef5350;
-$knocksSuccessColor : #1de9b6;
-$knocksLightRgba : rgba(255,248,220 , 0.5);
-$knocksPinkColor : #f06292;
-$knocksLightPinkColor : #f8bbd0;
-$knocksGrayColor : #cfd8dc 
-;$knocksLightCandyPinkColor : #fff7f8;
+}
 //lightrgb(255,248,220)
 
 //Knocks MIXINS
